[package]
name = "mrpack_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["cargo"] }
env_logger = "0.11.6"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
