[package]
name = "mrpack_downloader"
version = "1.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["cargo"] }
rayon = "1.10.0"
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
